# jaxampler

./: .gitignore  .pre-commit-config.yaml  CITATION.bib  CONTRIBUTING.md  README.md  aarsample_example.py  arsample_example.py  its_example.py  pyproject.toml  requirements.txt  requirments.txt  setup.py  test_rvs.py
.github/ISSUE_TEMPLATE/: bug-report.yaml  bug_report.md  config.yml  feature_request.md  feature_request.yaml
.github/workflows/: python-package.yml  python-publish.yml
example/: accept_reject_sampler.py  adaptive_accept_reject_sampler.py  inverse_transform_sampler.py  metropolis_hasting_sampler.py
jaxampler/: __init__.py  _jobj.py  _typing.py  _utils.py  jobj.py  montecarlo.py  rvs.py  sampler.py  typing.py  utils.py
jaxampler/_montecarlo/: __init__.py  integration.py  montecarlobox.py  montecarlogeneric.py
jaxampler/_rvs/: __init__.py  bernoulli.py  beta.py  binomial.py  boltzmann.py  cauchy.py  chi2.py  crvs.py  drvs.py  exponential.py  gamma.py  geometric.py  logistic.py  lognormal.py  normal.py  pareto.py  poisson.py  rayleigh.py  rvs.py  studentt.py  triangular.py  truncnormal.py  truncpowerlaw.py  uniform.py  weibull.py
jaxampler/_sampler/: __init__.py  aarsampler.py  arsampler.py  importancesampler.py  invtranssampler.py  mhsampler.py  sampler.py
jaxampler/_src/: jobj.py  typing.py  utils.py
jaxampler/_src/montecarlo/: __init__.py  integration.py  montecarlobox.py  montecarlogeneric.py
jaxampler/_src/rvs/: __init__.py  bernoulli.py  beta.py  binomial.py  boltzmann.py  cauchy.py  chi2.py  crvs.py  drvs.py  exponential.py  gamma.py  geometric.py  logistic.py  lognormal.py  normal.py  pareto.py  poisson.py  rayleigh.py  rvs.py  studentt.py  triangular.py  truncnormal.py  truncpowerlaw.py  uniform.py  weibull.py
jaxampler/_src/sampler/: __init__.py  aarsampler.py  arsampler.py  importancesampler.py  invtranssampler.py  mhsampler.py  sampler.py
jaxampler/montecarlo/: __init__.py  integration.py  montecarlo.py  montecarlobox.py  montecarlogeneric.py
jaxampler/rvs/: __init__.py  rvs.py
jaxampler/rvs/crvs/: __init__.py  beta.py  boltzmann.py  cauchy.py  chi2.py  continuousrv.py  crvs.py  exponential.py  gamma.py  logistic.py  lognormal.py  normal.py  pareto.py  rayleigh.py  studentt.py  triangular.py  truncnormal.py  truncpowerlaw.py  uniform.py  weibull.py
jaxampler/rvs/drvs/: __init__.py  bernoulli.py  binomial.py  drvs.py  geometric.py  (+1 more)
jaxampler/sampler/: __init__.py  aarsampler.py  arsampler.py  importancesampler.py  invtranssampler.py  mhsampler.py  sampler.py
models/: __init__.py
models/derivations/: beta.aux  beta.fdb_latexmk  beta.fls  beta.tex  poisson.aux  poisson.fdb_latexmk  poisson.fls  poisson.tex  powerlaw.aux  powerlaw.fdb_latexmk  powerlaw.fls  powerlaw.tex  truncnorm.aux  truncnorm.fdb_latexmk  truncnorm.fls  truncnorm.tex
models/utils/: beta.py  cauchy.py  chi2.py  continuousrv.py  distribution.py  exponential.py  gamma.py  gaussian.py  logistic.py  lognormal.py  normal.py  pareto.py  rayleigh.py  studentt.py  triangular.py  truncnorm.py  truncnormal.py  truncpowerlaw.py  uniform.py  weibull.py
tests/: binomial_test.py  boltzmann_test.py  crvs_test.py  drvs_test.py  exponential_test.py  geometric_test.py  lognormal_test.py  pareto_test.py  rayleigh_test.py  rvs_test.py  studentt_test.py  test_truncated_power_law.py  triangular_test.py  truncated_power_law_test.py  unifrom_test.py  utils_test.py  weibull_test.py
